kubernetes/openliberty/openliberty-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openliberty
spec:
  selector:
    matchLabels:
      app: openliberty
  replicas: 1
  template:
    metadata:
      labels:
        app: openliberty
    spec:
      containers:
        - name: openliberty
          image: yurak/openliberty:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
          resources:
            limits:
              memory: 600Mi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              port: 9080
              path: /health/live
            initialDelaySeconds: 300
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              port: 9080
              path: /health/ready
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - name: openliberty-config-volume
              mountPath: /config/jvm.options
              subPath: jvm-options
      volumes:
        - name: openliberty-config-volume
          configMap:
            name: openliberty-configmap
