kubernetes/openliberty/openliberty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openliberty
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9080"
spec:
  type: ClusterIP
  selector:
    app: openliberty
  ports:
    - protocol: TCP
      port: 9080
