kubernetes/openliberty/openliberty-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openliberty
spec:
  rules:
    - host: openliberty.minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openliberty
                port:
                  number: 9080
